--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
-        - name: Wlecome message
+        - name: Welcome message
           run: echo "My first Github Actions job"
 
         - name: List files
