--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,17 @@
-name: My First Workflow
-
 on: push
 
 jobs:
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Welcome message
-          run: echo "My first Github Actions job"
+  first_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: List files
-          run: ls
+      - name: Welcome message
+        run: echo "My first GitHub Actions job"
 
-        - name: Read file
-          run: cat README.md
+      - name: List files
+        run: ls
+
+      - name: Read file
+        run: cat README.md
