--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run tests
-        run: pytest
+        run: |
+          pytest -v --maxfail=1 --disable-warnings
