--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,3 +1,12 @@
+- name: Install dependencies
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+    pip install pytest
+
+pytest>=7.0
+
+
 name: Python CI Pipeline
 
 on:
@@ -20,7 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+          pip install pytest
 
       - name: Run tests
         run: |
